Lasanya sin horno

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <footer>Hecho con 🍊 por Ale M • <a href="{{site.github_repo}}">Código fuente en GitHub</a>, por si quieres contribuir : )</footer>
+    <footer>Hecho con 🥦 por Beatriz y Fernando • <a href="{{site.github_repo}}">Código fuente en GitHub</a>, basado en el códgio de <a href="https://github.com/bomberstudios/recetas">Ale Muñoz</a></footer>
 
   </body>
 </html>
