--- a/_layouts/receta.html
+++ b/_layouts/receta.html
@@ -4,7 +4,12 @@ layout: default
 
 <div class="receta">
   <h1>{{page.title}}</h1>
-  <h4>Dificultad: {{page.dificultad}} • Tiempo: {{page.tiempo}}</h4>
+  <h4>
+    Dificultad: {{page.dificultad}} • Tiempo: {{page.tiempo}}
+    {% if page.fuente %}
+     • <a href="{{ page.fuente.url }}" target="_blank">{{ page.fuente.nombre }}</a>
+    {% endif %}
+  </h4>
 
   {% if page.image %}
   <div class="photo"><img src="{{page.image}}" /></div>
